[gd_scene load_steps=4 format=3 uid="uid://b21lbyigd4kyu"]

[ext_resource type="PackedScene" uid="uid://dv35gqsuwuddc" path="res://Scenes/Prefabs/Connector.tscn" id="1_654cf"]
[ext_resource type="Script" path="res://Scenes/Prefabs/AndGate.gd" id="1_lab2d"]

[sub_resource type="BoxMesh" id="BoxMesh_vftk2"]
size = Vector3(1, 0.1, 1.5)

[node name="AndGate" type="Node3D"]
script = ExtResource("1_lab2d")

[node name="Body" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_vftk2")

[node name="InputConnector1" parent="." instance=ExtResource("1_654cf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0, 0.5)

[node name="InputConnector2" parent="." instance=ExtResource("1_654cf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0, 0.5)

[node name="OutputConnector" parent="." instance=ExtResource("1_654cf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)

[node name="Connector Lable" type="Label3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 0, 0.06, 0.299)
text = "<- In1
  Out->
<- In2"
horizontal_alignment = 0

[node name="GateName" type="Label3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 0.386, 0.06, -0.35)
text = "And Gate"

[connection signal="pulsed" from="." to="OutputConnector" method="_on_pulsed"]
[connection signal="pulsed" from="InputConnector1" to="." method="_on_input_connector_1_pulsed"]
[connection signal="pulsed" from="InputConnector2" to="." method="_on_input_connector_2_pulsed"]
